# Godot-OpenCV-plugin

./: .clangd  CMakeLists.txt  LICENSE  README.md  SConstruct  dont_touch.txt
.github/workflows/: build-plugin.yml
src/: main.cpp  main.hpp  register_types.cpp  test.cpp  test.hpp
test_project/: main.gd  main.tscn
test_project/opencv_plugin/: opencv_plugin.gdextension
